add button edit

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <p>The Best Choice for Making Friends</p>
       <p>친구를 만드는 최고의 선택</p>
     </div>
+    <div class="moveBtn">
+      <button type="button">Sign In</button>
+      <button type="button">Sign Up</button>
+    </div>
   </div>
 </body>
 
